fix checkmark alignment

--- a/styles/style.processed.css
+++ b/styles/style.processed.css
@@ -164,6 +164,8 @@ p#lastUpdated {
   padding-right: 5px;
   font-size: 1em;
   font-weight: 400;
+  position: relative;
+  top: 2px;
 }
 
 #menu button span.off {
@@ -171,6 +173,8 @@ p#lastUpdated {
   padding-right: 5px;
   font-size: 1em;
   font-weight: 400;
+  position: relative;
+  top: 2px;
 }
 
 .legend {
