--- a/styles/style.sass
+++ b/styles/style.sass
@@ -152,12 +152,16 @@ p#lastUpdated
     padding-right: 5px
     font-size: 1em
     font-weight: 400
+    position: relative
+    top: 2px
 
 #menu button span.off
     color: lightgray
     padding-right: 5px
     font-size: 1em
     font-weight: 400
+    position: relative
+    top: 2px
 
 .legend
     position: relative
